--- a/todo.css
+++ b/todo.css
@@ -1,3 +1,7 @@
+body {
+	background: #fff;
+}
+
 #container {
 	width: 360px;
 	margin: 100px auto;
@@ -9,7 +13,85 @@
 
 /* Completed todos styling. */
 .completed {
-	color: gray;
+	color: rgb(79,91,112);
 	font-style: italic;
 	text-decoration: line-through;
 }
+
+.show {
+	display: inline-block;
+}
+
+.fa-plus {
+	float: right;
+}
+
+h1 {
+	margin: 0px;
+	padding: 18px 12px;
+
+	background: rgb(33,81,163);
+	color: white;
+}
+
+input {
+	display: none;
+	box-sizing: border-box;
+	width: 100%;
+	height: 50px;
+	padding: 12px 9px;
+	border: 3px solid rgba(33,81,163,0);
+
+	font-size: 20px;
+	line-height: 50px;
+	font-family: 'Roboto', sans-serif;
+	color: rgb(163,51,33);
+	background: rgba(79,91,112,.1);
+}
+
+input:focus {
+	border: 3px solid rgb(33,81,163);
+	outline: none;
+}
+
+ul {
+	margin: 0px;
+	padding: 0px 0px;
+}
+
+li {
+	list-style: none;
+	height: 40px;
+
+	padding: 0px 0px 0px 12px;
+
+	font-size: 18px;
+	line-height: 40px;
+}
+
+li:nth-child(2n) {
+	background: rgba(79,91,112,.1);
+}
+
+span {
+	margin: 0px auto;
+	display: inline-block;
+	float: right;
+	height: 40px;
+	width: 0px;
+	background: rgb(163,51,33);
+	color: white;
+	text-align: center;
+	opacity: 0;
+	transition: .3s linear;
+}
+
+li:hover > span {
+	width: 40px;
+	opacity: 1;
+}
+
+
+
+
+
